plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
}
ext {
    set('springCloudVersion', "2023.0.3")
}
allprojects {
    group = 'org.example'
    version = '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
    repositories {
        mavenCentral()
    }
}
subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
    ext {
        set('springCloudVersion', "2023.0.3")
    }
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-web'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
        if(!project.name.contains("server") && !project.name.contains("common") && !project.name.contains("api")){
            implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
            implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
            implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
            implementation 'org.jboss.resteasy:resteasy-client:6.2.10.Final'
            implementation 'org.keycloak:keycloak-spring-security-adapter:21.1.1'
            implementation 'org.keycloak:keycloak-admin-client:25.0.4'
            implementation 'org.modelmapper:modelmapper:3.1.0'
        }
        if(project.name.contains("api")){
            implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.6.0'
            implementation 'org.springframework.boot:spring-boot-starter-webflux'
            implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
            implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
        }
    }
    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'io.projectreactor:reactor-test'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
